<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="project.miniproject.MainActivity">

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <Button
        android:id="@+id/filter"
        android:layout_width="80dp"
        android:layout_height="40dp"
        android:layout_marginBottom="242dp"
        android:onClick="filter"
        android:text="Filtrar" />


    <FrameLayout
        android:id="@+id/checkbox_dialog"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:background="@color/colorWhite"
        android:orientation="vertical">

        <GridLayout
            android:id="@+id/grid_layout"
            android:layout_width="200dp"
            android:layout_height="200dp">

            <CheckBox
                android:id="@+id/category1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:text="@string/restaurantes" />

            <CheckBox
                android:id="@+id/category2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="1"
                android:text="@string/bancos" />


            <CheckBox
                android:id="@+id/category3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="2"
                android:text="@string/postos" />

            <CheckBox
                android:id="@+id/category4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="3"
                android:text="@string/locais_publicos" />

            <CheckBox
                android:id="@+id/category5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_row="4"
                android:text="@string/compras" />

            <Button
                android:id="@+id/filter_point"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_column="0"
                android:layout_row="5"
                android:text="@string/aplicar" />

        </GridLayout>

    </FrameLayout>


</FrameLayout>